--- a/selfservice/hierarchical.twig
+++ b/selfservice/hierarchical.twig
@@ -19,21 +19,24 @@
     {% include 'frontend.' ~ template ~ '.selfservice.category_list' with {'categories': parent_categories} %}
 
 	{# Latest / Most Popular articles #}
+	{% if (popular is not empty and not popular.isEmpty()) or (latest is not empty and not latest.isEmpty()) %}
+	<div style="margin-top: 2rem;">
+		<ul class="sp-tabs">
+		    <li id="Popular" class="sp-active">
+				<a>{{ Lang.get('selfservice.popular_items') }}</a>
+	        </li>
+		    <li id="Latest">
+				<a>{{ Lang.get('selfservice.latest_items') }}</a>
+	        </li>
+		</ul>
 
-	<ul class="sp-tabs sp-mt-6">
-	    <li id="Popular" class="sp-active">
-			<a>{{ Lang.get('selfservice.popular_items') }}</a>
-        </li>
-	    <li id="Latest">
-			<a>{{ Lang.get('selfservice.latest_items') }}</a>
-        </li>
-	</ul>
-
-	<div id="tabPopular" class="sp-tab-content">
-		{% include 'frontend.' ~ template ~ '.selfservice.article_list' with {'articles': popular} %}
+		<div id="tabPopular" class="sp-tab-content">
+			{% include 'frontend.' ~ template ~ '.selfservice.article_list' with {'articles': popular} %}
+		</div>
+		<div id="tabLatest" class="sp-tab-content sp-hidden">
+			{% include 'frontend.' ~ template ~ '.selfservice.article_list' with {'articles': latest} %}
+		</div>
 	</div>
-	<div id="tabLatest" class="sp-tab-content sp-hidden">
-		{% include 'frontend.' ~ template ~ '.selfservice.article_list' with {'articles': latest} %}
-	</div>
+	{% endif %}
 
 {% endblock %}
