--- a/ticket/forms/message.twig
+++ b/ticket/forms/message.twig
@@ -10,19 +10,19 @@
 
     <div class="reply-form sp-editor-container sp-form-row sp-form-full">
         <div class="sp-input-container">
-            <div class="sp-recipients sp-truncate sp-cursor-pointer">
-                <div class="sp-table-row">
-                    <div class="sp-table-cell">{{ Lang.get('ticket.cc') }}</div>
-                    <div class="sp-table-cell">
-                        <div class="sp-recipients-text">
+            <div class="sp-recipients sp-truncate sp-cursor-pointer" style="margin-bottom: 1rem; padding: 0.75rem; background: rgba(31, 41, 55, 0.5); border: 1px solid rgba(168, 85, 247, 0.2); border-radius: 0.375rem;">
+                <div class="sp-table-row" style="display: table-row;">
+                    <div class="sp-table-cell" style="display: table-cell; padding-right: 1rem; color: #d1d5db; font-size: 0.875rem; font-weight: 500; vertical-align: top; padding-top: 0.5rem;">{{ Lang.get('ticket.cc') }}</div>
+                    <div class="sp-table-cell" style="display: table-cell; width: 100%;">
+                        <div class="sp-recipients-text" style="color: #9ca3af; font-size: 0.875rem; min-height: 1.5rem;">
                             {% if organisationEmails is empty and ticket.cc is empty %}
-                                <div class="sp-description">{{ Lang.get('ticket.cc_desc') }}</div>
+                                <div class="sp-description" style="color: #9ca3af; font-size: 0.875rem;">{{ Lang.get('ticket.cc_desc') }}</div>
                             {% else %}
-                                {{ organisationEmails.concat(ticket.cc).join(', ') }}
+                                <span style="color: #f3f4f6;">{{ organisationEmails.concat(ticket.cc).join(', ') }}</span>
                             {% endif %}
                         </div>
 
-                        <select name="cc[]" multiple="multiple" class="sp-recipients-input sp-hidden">
+                        <select name="cc[]" multiple="multiple" class="sp-recipients-input ticket-cc-select" style="width: 100%;">
                             {% for email in organisationEmails %}
                                 <option selected="selected" data-data='{{ {'value': email, 'unremovable': true}|json_encode(constant('JSON_FORCE_OBJECT')) }}'
                                         value='{{ email }}'>
@@ -37,7 +37,7 @@
                 </div>
             </div>
 
-            <div class="tox-rounded-none sp-validation-container">
+            <div class="tox-rounded-none sp-validation-container" style="min-height: 400px;">
                 {% set loadDraftMessageRoute = draft is not empty ? route('ticket.frontend.message.showJson', {id: draft.id}) : null %}
                 {{ form_editor('text', null, {'data-route': loadDraftMessageRoute, 'id': 'newMessage'}) }}
             </div>
