--- a/ticket/message.twig
+++ b/ticket/message.twig
@@ -5,9 +5,14 @@
 		</div>
 		<div class="sp-grow">
 			<div class="sp-message-header">
-				<span class="sp-name sp-text-lg {% if message.by == 0 %}sp-text-red-600{% else %}sp-text-green-600{% endif %}">
+				<span class="sp-name sp-text-lg" style="color: white !important;">
 					{{ message.user.formatted_name }}
 				</span>
+				{% if message.by == 0 or message.user.isOperator %}
+					<span class="sp-staff-badge" style="display: inline-block; margin-left: 0.5rem; padding: 0.125rem 0.5rem; background: rgba(168, 85, 247, 0.2); border: 1px solid rgba(168, 85, 247, 0.5); border-radius: 0.25rem; color: #a855f7; font-size: 0.75rem; font-weight: 500; vertical-align: middle;">
+						{{ Lang.get('general.staff') }}
+					</span>
+				{% endif %}
 				{% if not message.attachments.isEmpty() %}
 					<span class="sp-attachment sp-description" style="color: #9ca3af; font-size: 0.875rem;">&nbsp;
 						<svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="display: inline-block; vertical-align: middle;">
