--- a/ticket/message.twig
+++ b/ticket/message.twig
@@ -8,7 +8,7 @@
 				<span class="sp-name sp-text-lg" style="color: white !important;">
 					{{ message.user.formatted_name }}
 				</span>
-				{% if message.by == 0 or message.user.isOperator %}
+				{% if message.by == 0 %}
 					<span class="sp-staff-badge" style="display: inline-block; margin-left: 0.5rem; padding: 0.125rem 0.5rem; background: rgba(168, 85, 247, 0.2); border: 1px solid rgba(168, 85, 247, 0.5); border-radius: 0.25rem; color: #a855f7; font-size: 0.75rem; font-weight: 500; vertical-align: middle;">
 						{{ Lang.get('general.staff') }}
 					</span>
